--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "rc-select-city",
   "main": "./dist/index",
   "module": "./src/index.tsx",
-  "version": "1.0.0",
+  "version": "1.0.1",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com:w567675/rc-select-city.git"
+  },
   "dependencies": {
     "antd": "^3.1.6",
     "react": "^16.2.0",
