--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "rc-select-city",
-  "main": "./dist/index",
-  "module": "./src/index.tsx",
-  "version": "1.0.3",
+  "main": "./lib/index",
+  "module": "./es/index",
+  "version": "1.0.4",
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com:w567675/rc-select-city.git"
   },
   "dependencies": {
     "antd": "^3.1.6",
+    "fs-extra": "^5.0.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts-ts": "2.13.0",
@@ -17,8 +18,10 @@
     "whatwg-fetch": "^2.0.3"
   },
   "scripts": {
-    "start": "webpack-dev-server",
-    "build": "webpack"
+    "start": "webpack-dev-server --config webpack.config.dev.js",
+    "es": "tsc",
+    "lib": "tsc --outDir lib/ --module commonjs",
+    "build": "npm run es & npm run lib & node copy.js"
   },
   "devDependencies": {
     "@types/react": "^16.0.35",
